# ETBSaveManager

./: .env.production  .gitignore  .prettierignore  .prettierrc  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURE_SCOPE_REVIEW.md  LICENSE  MULTIPLAYER_666_Easy.json  OPTIMIZATION_REPORT.md  README-CN.md  README-HANT.md  README.md  UX_OPTIMIZATION_PLAN.md  download.html  env.d.ts  eslint.config.js  index.html  package.json  pnpm-lock.yaml  release-body-3.3.0.md  tsconfig.json  vite.config.js  vite.config.ts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/scripts/: package.json  process-feedback.mjs
.github/workflows/: deploy.yml  pages.yml  process-feedback.yml  release.yml
landing-page-react/: .gitignore  .npmrc  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  prettier.config.js  tsconfig.json  vite.config.ts
landing-page-react/src/: app.tsx  main.tsx
landing-page-react/tests/: setup.ts
plugins/: PLUGIN_DEV_GUIDE_CN.md  PLUGIN_DEV_GUIDE_EN.md  README.md  plugins.json
plugins/lang-ja-JP/: README.md  plugin.json  translations.json
plugins/lang-ko-KR/: plugin.json  translations.json
plugins/lang-pt-BR/: plugin.json  translations.json
plugins/lang-ru-RU/: plugin.json  translations.json
plugins/theme-cyberpunk/: plugin.json  theme.json
plugins/theme-dracula/: plugin.json  theme.json
plugins/theme-monokai/: plugin.json  theme.json
plugins/theme-nord/: plugin.json  theme.json
plugins/theme-solarized/: plugin.json  theme.json
public/: 404.html  BasicArchive.json  Level05.json  difficulty.json  download.html  pipes1.json  pipes2.json
public/locales/: en.json  zh.json
scripts/: optimize-images.cjs  optimize-images.mjs  sync-version.js
src/: App.vue  DownloadApp.vue  appContext.js  appContext.ts  download-main.ts  i18n.js  main.js  main.ts  setupProxy.js  types.ts
src-tauri/: Cargo.toml  build.rs  debug_output.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli_handlers.rs  common.rs  crypto_commands.rs  encryption.rs  error.rs  feedback_commands.rs  feedback_queue.rs  get_file_path.rs  github_client.rs  gpu_settings.rs  lib.rs  main.rs  new_save.rs  player_data.rs  save_commands.rs  save_editor.rs  save_shared.rs  save_utils.rs  steam_api.rs  system_commands.rs  system_info.rs  theme_commands.rs
src/Chinese/: functions.py  logger_setup.py  main.py
src/English/: functions.py  main.py
src/components/: ArchiveCard.vue  ArchiveCardFlow.vue  ArchiveEditModal.vue  ArchiveSearchFilter.vue  ArchivesList.vue  BatchEditModal.vue  ColorPicker.vue  ColorSection.vue  ConfirmDialog.vue  ConfirmModal.vue  CustomDropdown.vue  CustomSlider.vue  DownloadSection.vue  EditArchiveModal.vue  FeaturesSection.vue  FloatingActionButton.vue  Footer.vue  HeroSection.vue  I18nDebugger.vue  InventoryItemSelector.vue  LG_Button.vue  LG_Card.vue  LG_CreateAModal.vue  LG_CustomSelect.vue  LG_DeleteConfirm.vue  LG_Dropdown.vue  LG_EditModal.vue  LG_FormField.vue  LG_ItemMenu.vue  LG_Notification.vue  LG_Search.vue  LG_SideBar.vue  LazyImage.vue  LoadingAnimation.vue  MD_Dropdown.vue  Navbar.vue  NotificationPopup.vue  PerformanceMonitor.vue  PerformanceSettings.vue  PlayerManager.vue  (+17 more)
src/composables/: index.js  index.ts  useAnimations.js  useAnimations.ts  useArchiveActions.js  useArchiveActions.ts  useArchiveCard.js  useArchiveCard.ts  (+57 more)
(+502 files in other folders)
