[package]
name = "etbsavemanager"
version = "3.0.0-Alpha-6.3"
description = "A tool for managing Save games in ETB"
authors = ["Eververdants"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "etbsavemanager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
dirs-next = "2.0.0"
regex = "1.11.1"
uesave = "0.6.2"
chrono = "0.4.41"
walkdir = "2.5.0"
keyring = "3.6.2"
aes-gcm = "0.10.3"
argon2 = "0.5.3"
rand = "0.8.5"
zeroize = "1.8.1"
rand_core = "0.6"
indexmap = "2.10.0"
uuid = "1.17.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
hex = "0.4"
rayon = "1.10"
memmap2 = "0.9"
