[package]
name = "etbsavemanager"
version = "3.0.0-Beta-1"
description = "A tool for managing Save games in ETB"
authors = ["Eververdants"]
edition = "2021"

[lib]
name = "etbsavemanager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
dirs-next = "2.0.0"
regex = "1.11.1"
uesave = "0.6.2"
chrono = "0.4.41"
walkdir = "2.5.0"
keyring = "3.6.2"
aes-gcm = "0.10.3"
argon2 = "0.5.3"
rand = "0.8.5"
zeroize = "1.8.1"
rand_core = "0.6"
indexmap = "2.10.0"
uuid = { version = "1.17.0", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
hex = "0.4"
rayon = "1.10"
memmap2 = "0.9"
rusqlite = { version = "0.31", features = ["bundled"] }
base64 = "0.22"
urlencoding = "2.1"

# 仅在发布时启用优化，不影响开发编译速度
[profile.release]
lto = "thin"
strip = true
